2004-02-08  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* primitives/Makefile.am (TAGS_FILES), internals/Makefile.am
	(TAGS_FILES), Makefile.am (TAGS_FILES): Use this variable instead
	of ETAGS_ARGS so that TAGS can be built using separate build
	directory.

2003-11-01  Neil Jerram  <neil@ossau.uklinux.net>

	* internals/format.scm (format), internals/signal.scm (error),
	internals/load.scm (load): Export using #:replace to avoid
	duplicate binding warnings.

2003-01-05  Marius Vollmer  <mvo@zagadka.ping.de>

	* primitives/Makefile.am (elisp_sources): Added char-table.scm.

2002-12-28  Neil Jerram  <neil@ossau.uklinux.net>

	* base.scm (lang): Use char-table module.

	* primitives/char-table.scm (lang): New (stub definitions).

2002-12-08  Rob Browning  <rlb@defaultvalue.org>

	* Makefile.am (subpkgdatadir): VERSION -> GUILE_EFFECTIVE_VERSION.

	* primitives/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

	* internals/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

2002-02-13  Neil Jerram  <neil@ossau.uklinux.net>

	* base.scm (load-emacs): Add optional parameters for specifying an
	alternative load path, and for debugging this.  (Thanks to
	Thien-Thi Nguyen!)

	* primitives/syntax.scm (setq): Use `set'.

	* internals/set.scm (set): Fixed to support variables that are
	imported from other modules.

2002-02-12  Neil Jerram  <neil@ossau.uklinux.net>

	* transform.scm (scheme): Use set-current-module to ensure
	expected behaviour of resolve-module.

2002-02-08  Neil Jerram  <neil@ossau.uklinux.net>

	* STATUS: New file.

	* README: Updated.

	* interface.scm (translate-elisp): New exported procedure.
	(elisp-function): Symbol var is `obj', not `symbol'.
	
	* internals/lambda.scm, primitives/fns.scm: Fix confusion between
	interactive-spec and interactive-specification.
	
	* internals/lambda.scm (transform-lambda), primitives/syntax.scm
	(defmacro): Bind unspecified optional and rest arguments to #nil,
	not #f.
